grammar.js
		document: $ => seq(
			repeat(
				choice(
					$.comment,
					$.import_header,
				),
			),
			choice(
				$.page_header,
				$.taglib_header,
			),
			repeat(
				seq(
					optional($.comment),
					choice(
						$.import_header,
						$.page_header,
						$.taglib_header,
					),
				),
			),
			repeat($._top_level_tag),
		),

		_top_level_tag: $ => choice(
			$._top_level_sp_tag,
			$.comment,
			$.html_doctype,
			// TODO: prec doesn't work here
			prec(3, $.html_void_tag),
			prec(2, $.html_tag),
			prec(1, $.html_option_tag),
			$.java_tag,
			$.script_tag,
			$.style_tag,
			$.xml_comment,
			$.xml_entity,
		),

		page_header: $ => seq(
			$.header_open,
			'page',
			$.language_attribute,
			$.pageEncoding_attribute,
			$.contentType_attribute,
			$.header_close,
		),

		taglib_header: $ => seq(
			$.header_open,
			'taglib',
			choice(
				$.uri_attribute,
				$.tagdir_attribute,
			),
			$.prefix_attribute,
			$.header_close,
		),

		header_open: $ => '<%@',
		header_close: $ => '%>',

		// sp tags

		break_tag: $ => seq(
			$.break_tag_open,
			$.self_closing_tag_end,
		),
		break_tag_open: $ => '<sp:break',

		if_tag: $ => seq(
			$.if_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.contains_attribute,
					$.eq_attribute,
					$.gt_attribute,
					$.gte_attribute,
					$.ic_attribute,
					$.isNull_attribute,
					$.locale_attribute,
					$.lt_attribute,
					$.lte_attribute,
					$.name_attribute,
					$.neq_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.if_tag_close,
				),
			),
		),
		if_tag_open: $ => '<sp:if',
		if_tag_close: $ => '</sp:if>',

		io_tag: $ => seq(
			$.io_tag_open,
			repeat(
				choice(
					$.contenttype_attribute,
					$.type_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.io_tag_close,
				),
			),
		),
		io_tag_open: $ => '<sp:io',
		io_tag_close: $ => '</sp:io>',

		iterator_tag: $ => seq(
			$.iterator_tag_open,
			repeat(
				choice(
					$.collection_attribute,
					$.item_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.max_attribute,
					$.min_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.iterator_tag_close,
				),
			),
		),
		iterator_tag_open: $ => '<sp:iterator',
		iterator_tag_close: $ => '</sp:iterator>',

		json_tag: $ => seq(
			$.json_tag_open,
			repeat(
				choice(
					$.indent_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.object_attribute,
					$.overwrite_attribute,
					$.scope_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.json_tag_close,
				),
			),
		),
		json_tag_open: $ => '<sp:json',
		json_tag_close: $ => '</sp:json>',

		linktree_tag: $ => seq(
			$.linktree_tag_open,
			repeat(
				choice(
					$.arg_attribute,
					$.attributes_attribute,
					$.childrenlink_attribute,
					$.locale_attribute,
					$.localelink_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.parentlink_attribute,
					$.rootelement_attribute,
					$.sortkeys_attribute,
					$.sortsequences_attribute,
					$.sorttypes_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.linktree_tag_close,
				),
			),
		),
		linktree_tag_open: $ => '<sp:linktree',
		livetree_tag: $ => seq(
			$.livetree_tag_open,
			repeat(
				choice(
					$.action_attribute,
					$.childrenlink_attribute,
					$.leaflink_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.node_attribute,
					$.parentlink_attribute,
					$.publisher_attribute,
					$.rootelement_attribute,
					$.sortkeys_attribute,
					$.sortsequences_attribute,
					$.sorttypes_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		livetree_tag_open: $ => '<sp:livetree',

		login_tag: $ => seq(
			$.login_tag_open,
			repeat(
				choice(
					$.client_attribute,
					$.gui_attribute,
					$.login_attribute,
					$.namespace_attribute,
					$.password_attribute,
					$.scope_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		login_tag_open: $ => '<sp:login',

		loop_tag: $ => seq(
			$.loop_tag_open,
			repeat(
				choice(
					$.collection_attribute,
					$.list_attribute,
					$.separator_attribute,
					$.item_attribute,
					$.locale_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.loop_tag_close,
				),
			),
		),
		loop_tag_open: $ => '<sp:loop',
		loop_tag_close: $ => '</sp:loop>',

		map_tag: $ => seq(
			$.map_tag_open,
			repeat(
				choice(
					$.action_attribute,
					$.condition_attribute,
					$.default_attribute,
					$.expression_attribute,
					$.key_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.object_attribute,
					$.overwrite_attribute,
					$.scope_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.map_tag_close,
				),
			),
		),
		map_tag_open: $ => '<sp:map',
		map_tag_close: $ => '</sp:map>',

		password_tag: $ => seq(
			$.password_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.disabled_attribute,
					$.dynamics_attribute,
					$.fixvalue_attribute,
					$.format_attribute,
					$.id_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.personalization_attribute,
					$.readonly_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.password_tag_close,
				),
			),
		),
		password_tag_open: $ => '<sp:password',
		password_tag_close: $ => '</sp:password>',

		print_tag: $ => seq(
			$.print_tag_open,
			repeat(
				choice(
					$.arg_attribute,
					$.condition_attribute,
					$.convert_attribute,
					$.cryptkey_attribute,
					$.dateformat_attribute,
					$.decimalformat_attribute,
					$.decoding_attribute,
					$.decrypt_attribute,
					$.default_attribute,
					$.encoding_attribute,
					$.encrypt_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.text_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.print_tag_close,
				),
			),
		),
		print_tag_open: $ => '<sp:print',
		radio_tag: $ => seq(
			$.radio_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.checked_attribute,
					$.disabled_attribute,
					$.dynamics_attribute,
					$.format_attribute,
					$.hidden_attribute,
					$.id_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.personalization_attribute,
					$.readonly_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.radio_tag_close,
				),
			),
		),
		radio_tag_open: $ => '<sp:radio',
		range_tag: $ => seq(
			$.range_tag_open,
			repeat(
				choice(
					$.collection_attribute,
					$.name_attribute,
					$.range_attribute,
					$.scope_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.range_tag_close,
				),
			),
		),
		range_tag_open: $ => '<sp:range',
		self_closing_tag_end: $ => '/>',

		// spt tags

		dynamic_attribute: $ => seq(
			$.attribute_name,
			optional(
				seq(
					'=',
					$.string,
				),
			),
		),
		attribute_name: $ => /\w+/,

		action_attribute: $ => seq(
			'action',
			'=',
			$.string,
		),

		arg_attribute: $ => seq(
			'arg',
			'=',
			$.string,
		),

		attributes_attribute: $ => seq(
			'attributes',
			'=',
			$.string,
		),

		checked_attribute: $ => seq(
			'checked',
			'=',
			$.string,
		),

		client_attribute: $ => seq(
			'client',
			'=',
			$.string,
		),

		collection_attribute: $ => seq(
			'collection',
			'=',
			$.string,
		),

		contentType_attribute: $ => seq(
			'contentType',
			'=',
			$.string,
		),

		contenttype_attribute: $ => seq(
			'contenttype',
			'=',
			$.string,
		),

		convert_attribute: $ => seq(
			'convert',
			'=',
			$.string,
		),

		cryptkey_attribute: $ => seq(
			'cryptkey',
			'=',
			$.string,
		),

		default_attribute: $ => seq(
			'default',
			'=',
			$.string,
		),

		encoding_attribute: $ => seq(
			'encoding',
			'=',
			$.string,
		),

		indent_attribute: $ => seq(
			'indent',
			'=',
			$.string,
		),

		isNull_attribute: $ => seq(
			'isNull',
			'=',
			$.string,
		),

		item_attribute: $ => seq(
			'item',
			'=',
			$.string,
		),

		key_attribute: $ => seq(
			'key',
			'=',
			$.string,
		),

		language_attribute: $ => seq(
			'language',
			'=',
			$.string,
		),

		leaflink_attribute: $ => seq(
			'leaflink',
			'=',
			$.string,
		),

		list_attribute: $ => seq(
			'list',
			'=',
			$.string,
		),

		locale_attribute: $ => seq(
			'locale',
			'=',
			$.string,
		),

		login_attribute: $ => seq(
			'login',
			'=',
			$.string,
		),

		lookup_attribute: $ => seq(
			'lookup',
			'=',
			$.string,
		),

		max_attribute: $ => seq(
			'max',
			'=',
			$.string,
		),

		min_attribute: $ => seq(
			'min',
			'=',
			$.string,
		),

		name_attribute: $ => seq(
			'name',
			'=',
			$.object_string,
		),

		node_attribute: $ => seq(
			'node',
			'=',
			$.string,
		),

		object_attribute: $ => seq(
			'object',
			'=',
			$.object_string,
		),

		overwrite_attribute: $ => seq(
			'overwrite',
			'=',
			$.string,
		),

		pageEncoding_attribute: $ => seq(
			'pageEncoding',
			'=',
			$.string,
		),

		parentlink_attribute: $ => seq(
			'parentlink',
			'=',
			$.string,
		),

		password_attribute: $ => seq(
			'password',
			'=',
			$.string,
		),

		prefix_attribute: $ => seq(
			'prefix',
			'=',
			$.string,
		),

		range_attribute: $ => seq(
			'range',
			'=',
			$.string,
		),

		rootelement_attribute: $ => seq(
			/root[eE]lement/,
			'=',
			$.string,
		),

		scope_attribute: $ => seq(
			'scope',
			'=',
			$.string,
		),

		separator_attribute: $ => seq(
			'separator',
			'=',
			$.string,
		),

		sortkeys_attribute: $ => seq(
			'sortkeys',
			'=',
			$.string,
		),

		sortsequences_attribute: $ => seq(
			'sortsequences',
			'=',
			$.string,
		),

		sorttypes_attribute: $ => seq(
			'sorttypes',
			'=',
			$.string,
		),

		text_attribute: $ => seq(
			'text',
			'=',
			$.string,
		),

		type_attribute: $ => seq(
			'type',
			'=',
			$.string,
		),

		uri_attribute: $ => seq(
			'uri',
			'=',
			$.string,
		),

		value_attribute: $ => seq(
			'value',
			'=',
			$.string,
		),

		comment: $ => /<%--[^-]*-(?:(?:[^-]|-+[^-%]|-+%[^>])[^-]*-)*-+%>/,

		string: $ => seq(
			'"',
			repeat(
				choice(
					/[^"$!\}]+/,
					prec(1, $.interpolated_string),
					prec(2, $.interpolated_anchor),
					prec(3, '$'),
					prec(4, '!'),
				),
			),
			'"',
		),

		text: $ => /[^<>&\s]+(?:[^<>&]+[^<>&\s])?/,

		html_void_tag: $ => seq(
			$.html_void_tag_open,
			repeat($.dynamic_attribute),
			choice(
				'>',
				$.self_closing_tag_end,
			),
		),
		html_void_tag_open: $ => choice(
			'<area',
			'<base',
			'<br',
			'<col',
			'<embed',
			'<hr',
			'<img',
			'<input',
			'<link',
			'<meta',
			'<source',
			'<svg',
			'<track',
			'<wbr',
		),
