test/corpus/sp_io.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:io type="out" contenttype="json">
	{
		headline: <sp:print name="sp_headline"/>
	}
</sp:io>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (io_tag
    (io_tag_open)
    (type_attribute
      (string
        (string_content)))
    (contenttype_attribute
      (string
        (string_content)))
    (text)
    (print_tag
      (print_tag_open)
      (name_attribute
        (string
          (string_content)))
      (self_closing_tag_end))
    (text)
    (io_tag_close)))
