test/corpus/sp_iterator.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:iterator collection="sp_mainIterator" item="_it" min="1" max="5">
	<%-- some input fields... --%>
</sp:iterator>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (iterator_tag
    (iterator_tag_open)
    (collection_attribute
      (string
        (string_content)))
    (item_attribute
      (string
        (string_content)))
    (min_attribute
      (string
        (string_content)))
    (max_attribute
      (string
        (string_content)))
    (comment)
    (iterator_tag_close)))
