test/corpus/sp_json.txt
================================================================================
assign
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:json name="_contact" overwrite="true">{
	"name": "max mustermann",
	"address": {
		"street": "musterstraße",
		"housenumber": 123
	}
}</sp:json>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (json_tag
    (json_tag_open)
    (name_attribute
      (string
        (string_content)))
    (overwrite_attribute
      (string
        (string_content)))
    (text)
    (json_tag_close)))

================================================================================
format
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:json object="_contact" indent="3" lookup="false"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (json_tag
    (json_tag_open)
    (object_attribute
      (string
        (string_content)))
    (indent_attribute
      (string
        (string_content)))
    (lookup_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
