test/corpus/sp_linktree.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:linktree
		name="linktree"
		attributes="sp_title"
		parentlink="linktree_parent.navlink"
		rootelement="${!{linktree.root}.id}"
		sortkeys="name"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (linktree_tag
    (linktree_tag_open)
    (name_attribute
      (string
        (string_content)))
    (attributes_attribute
      (string
        (string_content)))
    (parentlink_attribute
      (string
        (string_content)))
    (rootelement_attribute
      (string
        (string_content)))
    (sortkeys_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
