test/corpus/sp_livetree.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:livetree name="tree"
		name="livetree"
		parentlink="myparent"
		leaflink="myRubrik"
		rootElement="${!{myroot}}"
		node="node"
		sortkeys="created, name"
		sortsequences="desc, asc"
		sorttypes="date, text"
		action="${action}"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (livetree_tag
    (livetree_tag_open)
    (name_attribute
      (string
        (string_content)))
    (name_attribute
      (string
        (string_content)))
    (parentlink_attribute
      (string
        (string_content)))
    (leaflink_attribute
      (string
        (string_content)))
    (rootelement_attribute
      (string
        (string_content)))
    (node_attribute
      (string
        (string_content)))
    (sortkeys_attribute
      (string
        (string_content)))
    (sortsequences_attribute
      (string
        (string_content)))
    (sorttypes_attribute
      (string
        (string_content)))
    (action_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
