test/corpus/sp_loop.txt
================================================================================
collection
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:loop collection="_someCollection" item="_item" locale="_someLocale">
	<sp:if name="_item" isNull="false">
		item: <sp:print name="_item"/>
		<sp:break/>
	</sp:if>
</sp:loop>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (loop_tag
    (loop_tag_open)
    (collection_attribute
      (string
        (string_content)))
    (item_attribute
      (string
        (string_content)))
    (locale_attribute
      (string
        (string_content)))
    (if_tag
      (if_tag_open)
      (name_attribute
        (string
          (string_content)))
      (isNull_attribute
        (string
          (string_content)))
      (text)
      (print_tag
        (print_tag_open)
        (name_attribute
          (string
            (string_content)))
        (self_closing_tag_end))
      (break_tag
        (break_tag_open)
        (self_closing_tag_end))
      (if_tag_close))
    (loop_tag_close)))


================================================================================
list
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:loop list="a|b|c|d" separator="|">
	The same text but just once.
	<sp:break />
</sp:loop>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (loop_tag
    (loop_tag_open)
    (list_attribute
      (string
        (string_content)))
    (separator_attribute
      (string
        (string_content)))
    (text)
    (break_tag
      (break_tag_open)
      (self_closing_tag_end))
    (loop_tag_close)))
