test/corpus/sp_map.txt
================================================================================
create
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:map name="_someMap" action="new" scope="request"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (map_tag
    (map_tag_open)
    (name_attribute
      (string
        (string_content)))
    (action_attribute
      (string
        (string_content)))
    (scope_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

================================================================================
assign
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:map name="_someMap" action="put" key="someKey" object="_someObject" overwrite="false" default="somethingElse"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (map_tag
    (map_tag_open)
    (name_attribute
      (string
        (string_content)))
    (action_attribute
      (string
        (string_content)))
    (key_attribute
      (string
        (string_content)))
    (object_attribute
      (string
        (string_content)))
    (overwrite_attribute
      (string
        (string_content)))
    (default_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

================================================================================
tag body
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:map name="_someMap" action="putAll" scope="page">
	[
		{
			"label": value_1
		},
		{
			"label": value_2
		}
	]
</sp:map>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (map_tag
    (map_tag_open)
    (name_attribute
      (string
        (string_content)))
    (action_attribute
      (string
        (string_content)))
    (scope_attribute
      (string
        (string_content)))
    (text)
    (map_tag_close)))
