test/corpus/sp_password.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:password name="sp_password" type="plain" value="******" special="yes"> this text does not make sense here </sp:password>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (password_tag
    (password_tag_open)
    (name_attribute
      (string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (value_attribute
      (string
        (string_content)))
    (dynamic_attribute
      (attribute_name)
      (html_string
        (string_content)))
    (text)
    (password_tag_close)))
