test/corpus/sp_print.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:print name="_someVariable" default="empty"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (print_tag
    (print_tag_open)
    (name_attribute
      (string
        (string_content)))
    (default_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

================================================================================
complex
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:print text="some %s text" arg="'formatted'" encoding="sha1" convert="json" cryptkey="${_key}"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (print_tag
    (print_tag_open)
    (text_attribute
      (string
        (string_content)))
    (arg_attribute
      (string
        (string_content)))
    (encoding_attribute
      (string
        (string_content)))
    (convert_attribute
      (string
        (string_content)))
    (cryptkey_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
