test/corpus/sp_radio.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:radio name="radio" value="radioButtonOne" checked="true"locale="en"/> number 1<br>
<sp:radio name="radio" value="radioButtonTwo" locale="en"/> number 2<br>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (radio_tag
    (radio_tag_open)
    (name_attribute
      (string
        (string_content)))
    (value_attribute
      (string
        (string_content)))
    (checked_attribute
      (string
        (string_content)))
    (locale_attribute
      (string
        (string_content)))
    (self_closing_tag_end))
  (text)
  (html_void_tag
    (html_void_tag_open))
  (radio_tag
    (radio_tag_open)
    (name_attribute
      (string
        (string_content)))
    (value_attribute
      (string
        (string_content)))
    (locale_attribute
      (string
        (string_content)))
    (self_closing_tag_end))
  (text)
  (html_void_tag
    (html_void_tag_open)))
