test/corpus/sp_range.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:range name="_spring" collection="_months" range="2,3,4"/>
<sp:range name="_summer" collection="_months" range="5-7"/>
<sp:range name="_autumn" collection="_months" range="8-10"/>
<sp:range name="_winter" collection="_months" range="$,0,1"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (range_tag
    (range_tag_open)
    (name_attribute
      (string
        (string_content)))
    (collection_attribute
      (string
        (string_content)))
    (range_attribute
      (string
        (string_content)))
    (self_closing_tag_end))
  (range_tag
    (range_tag_open)
    (name_attribute
      (string
        (string_content)))
    (collection_attribute
      (string
        (string_content)))
    (range_attribute
      (string
        (string_content)))
    (self_closing_tag_end))
  (range_tag
    (range_tag_open)
    (name_attribute
      (string
        (string_content)))
    (collection_attribute
      (string
        (string_content)))
    (range_attribute
      (string
        (string_content)))
    (self_closing_tag_end))
  (range_tag
    (range_tag_open)
    (name_attribute
      (string
        (string_content)))
    (collection_attribute
      (string
        (string_content)))
    (range_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

